--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss": "^8.4.24",
+    "react-router": "^6.14.0",
+    "react-router-dom": "^6.14.0",
     "react-typed": "^1.2.0",
     "tailwindcss": "^3.3.2"
   }
